# atlas-richie-platform

./: .gitignore  .sdkmanrc  CHANGELOG.en.md  CHANGELOG.md  CHANGELOG.zh.md  CODE_OF_CONDUCT.en.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh.md  CONTRIBUTING.en.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  LICENSE  NOTICE  README.en.md  README.md  README.zh.md  SECURITY.md  SECURITY.zh.md  checkstyle.xml  pom.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  (+1 more)
.harness/: INIT_REPORT.md  agent.md
atlas-richie-base/: README.md  README.zh.md  pom.xml
atlas-richie-component/: .gitignore  README.md  README.zh.md  TESTING-PROGRESS.md  pom.xml
atlas-richie-component-template/: README.md  pom.xml
atlas-richie-gateway-service/: .gitignore  Dockerfile  GatewayApplication.http  README.md  README.zh.md  http-client.private.env.json  pom.xml
atlas-richie-gateway-service/src/main/resources/client-library/cpp/: CMakeLists.txt  README.md  curl_wrapper.cpp  curl_wrapper.h  duplicate_submit.cpp  duplicate_submit.h  ecc_crypto.cpp  ecc_crypto.h  http_client.cpp  http_client.h  url.h
atlas-richie-gateway-service/src/main/resources/client-library/cpp/example/: main.cpp  url.h
atlas-richie-gateway-service/src/main/resources/client-library/rust/: Cargo.toml  README.md
atlas-richie-gateway-service/src/main/resources/client-library/rust/examples/: main.rs  url.rs
atlas-richie-gateway-service/src/main/resources/client-library/rust/examples/actix-web/: README.md  main.rs
atlas-richie-gateway-service/src/main/resources/client-library/rust/src/: lib.rs  result.rs  url.rs
docs/: dao-tenant-analysis.md  dao-tenant-refactor-plan.md
src/: header.txt
(+3041 files in other folders)
